--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FuH0OnL0EYZmlPtvzqpl4c7%2FPortfolio-Prototype%3Fnode-id%3D1%253A2%26viewport%3D-633%252C1350%252C0.5933887958526611%26scaling%3Dcontain&chrome=DOCUMENTATION"
                         allowfullscreen></iframe>
                     <p>Work in progress:</p>
-                    <iframe src="Homepage_Survey.pdf" width="100%" height="450px"></iframe>     
+                    <iframe src="./Homepage_Survey.pdf" width="100%" height="450px"></iframe>     
                     <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1200" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FWNbchwZlEDHyb08Eqz6WKK%2FATSE-Neu%3Fnode-id%3D7%253A262%26viewport%3D-190%252C507%252C0.5264465808868408%26scaling%3Dmin-zoom&chrome=DOCUMENTATION" allowfullscreen></iframe>
                     </div>
                 
