--- a/index.html
+++ b/index.html
@@ -158,6 +158,20 @@
                 </div>
             </div>
         </div>
+        <div class="row">
+            <div class="content">
+                <div class="card">
+
+                    <h4>A LOGO ANIMATION</h4>
+                    <h5>EQUESTRIAN-LIVE.COM</h5>
+                    <p>ILLUSTRATOR | AFTER EFFECTS | BLENDER | AUDITION <br />
+                        (work in progress)</p>
+                    <iframe src="https://player.vimeo.com/video/470182370" max-width="100%" height="500" frameborder="0"
+                        allow="autoplay; fullscreen" allowfullscreen></iframe>
+
+                </div>
+            </div>
+        </div>
         <div class="row stopmotion">
             <div class="content">
                 <div class="card">
