--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 </div>
             </div>
              
-        <div class="row">
+        <div class="row print">
             <div class="content">
                 <div class="card">
 
